third_party/linenoise/linenoise.cpp
@@ -164,7 +164,7 @@ static int isUnsupportedTerm(void) {
     return 0;
 }
 
-static void freeHistory(void) {
+void linenoiseHistoryFree(void) {
     if (history) {
         int j;
 
@@ -236,7 +236,6 @@ static void disableRawMode(int fd) {
 /* At exit we'll try to fix the terminal to the initial conditions. */
 static void linenoiseAtExit(void) {
     disableRawMode(STDIN_FILENO);
-    freeHistory();
 }
 
 static int getColumns(void) {
@@ -960,6 +959,7 @@ static int linenoiseRaw(char *buf, size_t buflen, PROMPTINFO & pi) {
     return count;
 }
 
+// the returned string is allocated with strdup() and must be freed by calling free()
 char *linenoise(const char *prompt) {
     char buf[LINENOISE_MAX_LINE];
     int count;
