third_party/linenoise/linenoise.h
@@ -50,6 +50,6 @@ int linenoiseHistoryAdd(const char *line);
 int linenoiseHistorySetMaxLen(int len);
 int linenoiseHistorySave(const char *filename);
 int linenoiseHistoryLoad(const char *filename);
-void linenoiseClearScreen(void);
+void linenoiseHistoryFree(void);
 
 #endif /* __LINENOISE_H */
